# c031c6_nucleo_robo_rust

./: .gitignore  Cargo.toml  Embed.toml  README.md
.cargo/: config
examples/: adc_read_rtic.rs  blink_rtic.rs  fix_point_rtic.rs  pot_pos_rtic.rs  ssd1306_klaptik_rtic.rs  ssd1306_rtic.rs  ushell_rtic.rs
